--- a/src/litery/AppLitery.css
+++ b/src/litery/AppLitery.css
@@ -8,3 +8,11 @@
 .literyDiv input {
 	clear: both;
 }
+
+.literyDiv span {
+	display: inline-block;
+	padding: 16px;
+	text-align: center;
+	margin: 16px;
+	border: 1px solid #000;
+}
