--- a/src/containers/App.module.css
+++ b/src/containers/App.module.css
@@ -1,8 +1,17 @@
 .App {
   text-align: center;
   margin: 20px;
+  border: 1px solid #222;
+  box-shadow: 0 2px 4px #111;
+  background-color: #eee;
+}
+
+.AppPF{
+  text-align: center;
+  margin: 20px;
   border: 1px solid #eee;
   box-shadow: 0 2px 4px #ddd;
+
 }
 
 .colorRed{
