aktulazowanie stanu przez funkcje anonimowe

--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -1,7 +1,7 @@
 .App {
   text-align: center;
   border: 1px solid #eee;
-  box-shadow: 0 2px 4px #ddd;
+  box-shadow: 0 2px 4px #111;
   margin: 20px;
 }
 
