--- a/src/containers/App.module.css
+++ b/src/containers/App.module.css
@@ -10,7 +10,7 @@
   text-align: center;
   margin: 20px;
   border: 1px solid #eee;
-  box-shadow: 0 2px 4px #ddd;
+  box-shadow: 0 2px 4px #111;
 
 }
 
