--- a/src/components/Persons/Person/Person.module.css
+++ b/src/components/Persons/Person/Person.module.css
@@ -1,8 +1,8 @@
 .persons {
 	width: 70%;
 	margin:15px auto;
-	border: 1px solid #eee;
-	box-shadow: 0 2px 4px #ddd;
+	border: 1px solid #111;
+	box-shadow: 0 2px 4px #111;
 	padding: 15px;
 	text-align: center;
 }
